css/styles.css
/* ... */
@media (max-width: 1050px) {
  .lg-container {
    max-width: 90%;
  }

  .form-section .form-content.lg-container {
    flex-direction: column;
    gap: 50px;
  }
}

/* For small screens (mobile) */
@media (max-width: 800px) {
  .container, .lg-container, .xl-container {
    padding-left: 1rem;
    padding-right: 1rem;
    max-width: 100%;
  }

  section {
    padding: 30px 1rem;
  }

  .site-header {
    height: auto;
    padding: 2rem 1rem;
  }

  .main-nav {
    position: fixed;
    top: 0;
    left: -100%;
    width: 100%;
    height: 100%;
    transition: left 0.3s ease-in-out;
    z-index: 1005;
    display: flex;
    align-items: flex-start;
    justify-content: center;
  }

  .main-nav.main-nav--active {
    left: 0;
  }

  .main-nav ul {
    flex-direction: column;
    padding: 2rem 0;
    gap: 1rem;
    text-align: center;
  }

  .main-nav ul li a {
    color: #333;
  }

  /* Hamburger Menu */
  .hamburger-menu {
    display: block;
    position: relative;
    z-index: 1002;
  }

  .hamburger-menu.hamburger-menu--active {
    position: fixed;
    right: 1em;
    top: 1rem;
  }

  /* Adjustments for text sizes */
  .text-xxl {
    font-size: 2.5rem;
  }
  .text-xl {
    font-size: 2rem;
  }
  .text-lg {
    font-size: 1.5rem;
  }
  .text-md {
    font-size: 1.2rem;
  }
  .text-sm {
    font-size: 1rem;
  }

  .header-content h1 {
    font-size: 2rem;
  }

  .header-content p {
    font-size: 1rem;
  }

  .btn {
    padding: 0.8rem 1.5rem;
    margin: 10px 10px;
  }

  .btn-block {
    padding: 0.8rem;
  }

  .feature-section {
    grid-template-columns: 1fr;
    padding: 1rem;
    gap: 2rem;
    text-align: center;
  }

  .feature-section .laptop-mockup {
    display: none; /* Hide the laptop mockup on small screens */
  }

  .feature-section .feature-body-content {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .auth-form-container {
    width: 100%;
    padding: 20px;
  }

  .testimonial-section {
    padding-bottom: 50px;
  }

  .testimonial-section .testimonial-content .section-header {
    padding-top: 50px;
  }

  .testimonial-section .testimonial-grid {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    margin-top: 20px;
  }

  .showcase-section .showcase-header {
    max-width: 100%;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .showcase-section .showcase-grid {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
    gap: 20px;
  }

  .team-section .team-profiles {
    max-width: 100%;
    flex-direction: column;
    align-content: center;
    align-items: center;
    gap: 50px;
  }

  .team-section .profile-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }
  
  .pricing-section .pricing-grid {
    grid-template-columns: 1fr;
    grid-template-rows: auto;
  }

  .pricing-section .pricing-grid .price-card {
    padding: 1.5rem;
  }

  .pricing-section .pricing-grid .price-card:last-child {
    padding-bottom: 1.5rem;
  }

  .pricing-section .pricing-grid .price-card:last-child a {
    transform: translateY(0);
  }

  .site-footer .footer-top,
  .site-footer .footer-bottom {
    flex-direction: column;
    text-align: center;
    gap: 1rem;
  }

  .site-footer .policy-socials {
    order: 2;
    margin-top: 1rem;
  }

  .site-footer .footer-bottom {
    flex-direction: column;
    text-align: center;
    align-items: center;
    gap: 1rem;
  }

  .site-footer .footer-links ul {
    flex-direction: column;
    gap: 1rem;
    align-items: center;
    margin-bottom: 1em;
  }

  .site-footer .footer-logo {
    order: 1;
  }

  .site-footer .policy-socials,
  .site-footer .footer-links ul {
    order: 1;
  }

  .site-footer .footer-bottom p {
    order: 2;
  }
}

/* General small screen styles, for devices narrower than 480px. */
@media (max-width: 480px) {
  .text-xxl {
    font-size: 2rem;
  }
  .text-xl {
    font-size: 1.8rem;
  }
  .text-lg {
    font-size: 1.3rem;
  }
  .text-md {
    font-size: 1.1rem;
  }
  .text-sm {
    font-size: 0.9rem;
  }
}

